--- a/www/css/paragridma.css
+++ b/www/css/paragridma.css
@@ -939,6 +939,7 @@ input[type=url],
 input[type=password],
 input[type=phone],
 input[type=number],
+input[type=tel],
 textarea,
 select,
 .customFileInput .fileName {
@@ -956,6 +957,7 @@ input[type=url],
 input[type=password],
 input[type=phone],
 input[type=number],
+input[type=tel],
 textarea,
 select,
 .customFileInput .fileName {
@@ -971,6 +973,7 @@ input[type=url],
 input[type=password],
 input[type=phone],
 input[type=number],
+input[type=tel],
 .customFileInput .fileName {
   vertical-align: middle;
 }
@@ -980,6 +983,7 @@ input[type=url]:focus,
 input[type=password]:focus,
 input[type=phone]:focus,
 input[type=number]:focus,
+input[type=tel]:focus,
 textarea:focus,
 select:focus {
   border-color: #66afe9;
@@ -993,6 +997,7 @@ input[type=url]:-moz-placeholder,
 input[type=password]:-moz-placeholder,
 input[type=phone]:-moz-placeholder,
 input[type=number]:-moz-placeholder,
+input[type=tel]:-moz-placeholder,
 textarea:-moz-placeholder {
   color: #aaaaaa;
 }
@@ -1002,6 +1007,7 @@ input[type=url]::-moz-placeholder,
 input[type=password]::-moz-placeholder,
 input[type=phone]::-moz-placeholder,
 input[type=number]::-moz-placeholder,
+input[type=tel]::-moz-placeholder,
 textarea::-moz-placeholder {
   color: #aaaaaa;
 }
@@ -1011,6 +1017,7 @@ input[type=url]:-ms-input-placeholder,
 input[type=password]:-ms-input-placeholder,
 input[type=phone]:-ms-input-placeholder,
 input[type=number]:-ms-input-placeholder,
+input[type=tel]:-ms-input-placeholder,
 textarea:-ms-input-placeholder {
   color: #aaaaaa;
 }
@@ -1020,6 +1027,7 @@ input[type=url]::-webkit-input-placeholder,
 input[type=password]::-webkit-input-placeholder,
 input[type=phone]::-webkit-input-placeholder,
 input[type=number]::-webkit-input-placeholder,
+input[type=tel]::-webkit-input-placeholder,
 textarea::-webkit-input-placeholder {
   color: #aaaaaa;
 }
