--- a/www/views/create.html
+++ b/www/views/create.html
@@ -3,9 +3,9 @@
     <h1 class="title h2 ac">{{ calculator.title }}</h1>
     <div class="errorInfoPanel" ng-if="calculator.error != ''" ng-bind-html="calculator.error">
     </div>
-    <div class="calculator">
+    <div class="calculator" ng-class="{moving: calculator.isMoving, reverse: calculator.isMovingReverse}">
         <label ng-bind-html="calculator.description"></label>
-        <input ng-model="calculatorVal" type="number">
+        <input ng-model="calculatorVal" type="tel" ng-change="checkCalulatorValue()">
         <ul class="clearfix">
             <li><a class="bt bg_gray" ng-click="insertKey(1)">1</a></li>
             <li><a class="bt bg_gray" ng-click="insertKey(2)">2</a></li>
