--- a/views/about.html
+++ b/views/about.html
@@ -3,12 +3,13 @@
     <div id="landingTitle"></div>
 
     <h2 class="title h2">What is it?</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta, corporis sequi aspernatur quos consequuntur possimus error neque officia fuga aliquid accusamus iure autem ipsam amet maiores voluptatem incidunt hic quas?</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta, corporis sequi aspernatur quos consequuntur possimus error neque officia fuga aliquid accusamus iure autem ipsam amet maiores voluptatem incidunt hic quas?</p>
+    <p>Meeting time & cost is an app that try to help you in checking how much money you or your company is wasting on a meeting.</p>
+
 
     <h2 class="title h2">Who do it?</h2>
     <span class="ownerLogo sp fr"></span>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta, corporis sequi aspernatur quos consequuntur possimus error neque officia fuga aliquid accusamus iure autem ipsam amet maiores voluptatem incidunt hic quas? possimus error neque officia fuga aliquid accusamus iure autem ipsam amet maiores voluptatem incidunt hic quas?</p>
+    <p>It is a personal project of <a href="http://www.vissit.com/somos">Jaime Fernández</a> (<a href="http://www.vissit.com/">vissit.com</a>) with the proposal of learning new technologies like AngularJS or PhoneGap.</p>
+    <p>You can read more info about this project on <a href="http://www.vissit.com/the-process-of-create-my-first-mobile-app">my personal blog</a>. </p>
 
 
 </div>
