--- a/views/intro.html
+++ b/views/intro.html
@@ -1,7 +1,7 @@
 <div id="landing" class="page">
     <div id="landingTitle"></div>
 
-    <p> <strong>Do you know how much your next meeting will cost to your company?</strong>
+    <p> <strong>Do you know how much your next meeting is gonna cost to your company?</strong>
         Is this meeting worth it? This app’ll help you to track time and cost of any meeting.
     </p>
 
